--- a/style.css
+++ b/style.css
@@ -15,3 +15,32 @@ div.developer {
   padding: 6px;
   text-align: center;
 }
+
+h2 {
+  font-style: bold;
+  text-align: center;
+}
+
+div.food {
+  width: 250px;
+  display: inline-block;
+  border: 2px solid grey;
+  border-radius: 5px;
+  padding: 6px;
+  text-align: center;
+}
+
+div.food-image{
+  width: 400px;
+  display: inline-block;
+  border: 2px solid grey;
+  border-radius: 5px;
+  padding: 6px;
+  text-align: center;
+}
+
+h3 {
+  color: magenta;
+  font-style: bold;
+  text-align: center
+}
